--- a/ITalker/app/src/main/res/layout/activity_main.xml
+++ b/ITalker/app/src/main/res/layout/activity_main.xml
@@ -73,6 +73,7 @@
         android:layout_marginBottom="@dimen/len_68"
         android:layout_marginEnd="@dimen/len_16"
         android:padding="@dimen/len_20"
+        android:translationY="@dimen/len_76"
         android:src="@drawable/ic_group_add"
         android:tint="@color/white"
 
