--- a/ITalker/common/src/main/res/layout/cell_galley.xml
+++ b/ITalker/common/src/main/res/layout/cell_galley.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<net.qiujuer.italker.common.widget.SquareLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<net.qiujuer.italker.common.widget.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="1dp"
     android:background="@color/white"
     android:orientation="vertical">
@@ -29,6 +29,7 @@
         android:button="@drawable/sel_cb_circle"
         android:clickable="false"
         android:visibility="gone"
+        app:buttonTint="@color/cb_gallery"
         android:drawablePadding="0dp"
         android:enabled="false"
         android:padding="0dp" />
