--- a/ITalker/app/src/main/res/layout/fragment_active.xml
+++ b/ITalker/app/src/main/res/layout/fragment_active.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     tools:context="net.qiujuer.italker.push.frags.main.ActiveFragment">
 
-    <net.qiujuer.italker.common.widget.GalleryView
-        android:id="@+id/galleryView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="1dp"/>
+    <!--<net.qiujuer.italker.common.widget.GalleryView-->
+        <!--android:id="@+id/galleryView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:padding="1dp"/>-->
 
 
 
