--- a/ITalker/app/src/main/res/layout/activity_account.xml
+++ b/ITalker/app/src/main/res/layout/activity_account.xml
@@ -6,12 +6,17 @@
     android:layout_height="match_parent"
 
     tools:context="net.qiujuer.italker.push.activities.AccountActivity">
-     <ImageView
-         android:layout_width="match_parent"
-         android:layout_height="match_parent" />
+
+    <ImageView
+        android:id="@+id/im_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/app_name"
+        android:foreground="@color/maskChatHeader"
+        android:scaleType="centerCrop" />
 
     <FrameLayout
         android:id="@+id/lay_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 </FrameLayout>
