--- a/ITalker/app/src/main/res/layout/fragment_register.xml
+++ b/ITalker/app/src/main/res/layout/fragment_register.xml
@@ -12,8 +12,8 @@
         android:background="@drawable/bg_gradient_black"
         android:paddingBottom="@dimen/len_28"
         android:paddingTop="@dimen/len_40"
-        app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:title="@string/label_register_welcome" />
+        app:title="@string/label_register_welcome"
+        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -115,6 +115,7 @@
             android:layout_marginStart="@dimen/len_44"
             android:layout_marginTop="@dimen/len_2"
             android:background="@color/black_alpha_32" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -152,23 +153,25 @@
         </LinearLayout>
 
     </LinearLayout>
+
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        android:layout_marginTop="@dimen/len_16"
         android:paddingEnd="@dimen/len_16"
         android:paddingStart="@dimen/len_16">
+
         <TextView
+            android:id="@+id/txt_go_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
-            android:id="@+id/txt_go_login"
-            android:textSize="@dimen/font_14"
             android:layout_marginEnd="@dimen/len_16"
-            android:textColor="@color/white"
             android:text="@string/label_go_login"
-            android:textStyle="bold"
-            />
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_14"
+            android:textStyle="bold" />
 
         <ImageView
             android:layout_width="@dimen/len_12"
@@ -177,23 +180,39 @@
             android:contentDescription="@string/app_name"
             android:scaleType="centerInside"
             android:src="@drawable/ic_direction_right"
-            android:tint="@color/white"/>
+            android:tint="@color/white" />
     </FrameLayout>
+
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/len_28">
 
         <net.qiujuer.genius.ui.widget.Button
+            android:id="@+id/btn_submit"
             android:layout_width="@dimen/len_172"
             android:layout_height="@dimen/len_44"
             android:layout_gravity="center"
+            android:background="@drawable/sel_btn_bg_black_alpha_44"
             android:text="@string/label_register"
             android:textColor="@color/white"
             app:gTouchColor="@color/white_alpha_48"
             app:gTouchCornerRadius="22dp"
-            app:gTouchEffect="ripple"
-            android:background="@drawable/sel_btn_bg_black_alpha_44"/>
+            app:gTouchEffect="ripple" />
 
+        <net.qiujuer.genius.ui.widget.Loading
+            android:id="@+id/loading"
+            android:layout_width="@dimen/len_36"
+            android:layout_height="@dimen/len_36"
+            android:layout_gravity="center"
+            app:gAutoRun="false"
+            app:gBackgroundColor="@color/trans"
+            app:gForegroundColor="@color/white"
+            app:gForegroundLineSize="1dp" />
     </FrameLayout>
 </LinearLayout>
