--- a/ITalker/app/src/main/res/layout/fragment_update_info.xml
+++ b/ITalker/app/src/main/res/layout/fragment_update_info.xml
@@ -25,47 +25,47 @@
             app:layout_constraintTop_toTopOf="parent"
             app:title="@string/label_update_info_tips"
             app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
-            tools:layout_editor_absoluteX="8dp" />
+             />
 
 
         <net.qiujuer.italker.common.widget.PortraitView
             android:id="@+id/im_portrait"
             android:layout_width="92dp"
             android:layout_height="92dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="@dimen/len_32"
             android:src="@drawable/default_holder_add"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar2"
-            tools:layout_editor_absoluteX="146dp" />
+            />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/len_4"
             android:text="@string/label_portrait_tips"
             android:textAlignment="center"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/im_portrait"
-            tools:layout_editor_absoluteX="136dp" />
+             />
 
         <ImageView
             android:id="@+id/im_sex"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginBottom="4dp"
+            android:layout_width="@dimen/len_24"
+            android:layout_height="@dimen/len_24"
+            android:layout_marginBottom="@dimen/len_4"
             android:background="@drawable/sel_bg_sex"
             android:contentDescription="@string/app_name"
-            android:padding="5dp"
+            android:padding="@dimen/len_4"
             android:src="@drawable/ic_sex_man"
             android:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/im_portrait"
             app:layout_constraintEnd_toEndOf="@+id/im_portrait"
-            tools:layout_editor_absoluteX="208dp" />
-
+             />
+        <!--match_parent 无效-->
         <net.qiujuer.genius.ui.widget.EditText
             android:id="@+id/edit_desc"
             android:layout_width="0dp"
@@ -86,7 +86,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
-            tools:layout_editor_absoluteX="16dp" />
+             />
     </android.support.constraint.ConstraintLayout>
 
     <Space
