--- a/ITalker/app/src/main/res/layout/fragment_search_group.xml
+++ b/ITalker/app/src/main/res/layout/fragment_search_group.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.qiujuer.italker.push.frags.account.RegisterFragment">
+    tools:context="net.qiujuer.italker.push.frags.search.SearchGroupFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
