--- a/ITalker/common/src/main/res/values/ids.xml
+++ b/ITalker/common/src/main/res/values/ids.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--recycler封装的tag属性-->
-    <item name="tag_recycler_holder" type="id"/>
+    <item name="tag_recycler_holder" type="id" />
     <!--默认头像的drawable名字-->
     <item name="default_portrait" type="drawable" />
+    <!--Toolbar的默认id名-->
+    <item name="toolbar" type="id" />
 </resources>
