--- a/ITalker/app/src/main/res/layout/fragment_contact.xml
+++ b/ITalker/app/src/main/res/layout/fragment_contact.xml
@@ -4,12 +4,22 @@
     android:layout_height="match_parent"
     tools:context="net.qiujuer.italker.push.frags.main.ContactFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="@color/textPrimary"
-        android:layout_height="wrap_content"
-        android:text="Contact" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_main_recycler"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/len_12"
+        android:paddingTop="@dimen/len_12"
+        android:visibility="gone"
+        android:elevation="1dp"
+        android:outlineProvider="bounds"
+        tools:targetApi="lollipop"/>
+
+    <net.qiujuer.italker.common.widget.EmptyView
+        android:id="@+id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
