--- a/ITalker/app/src/main/res/layout/activity_message.xml
+++ b/ITalker/app/src/main/res/layout/activity_message.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/lay_container"
     android:layout_height="match_parent"
     tools:context="net.qiujuer.italker.push.activities.MessageActivity">
-
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:contentDescription="@string/app_name"
+        android:foreground="@color/black_alpha_16"
+        android:scaleType="centerInside"
+        android:layout_height="match_parent"
+        android:src="@drawable/bg_src_woman"/>
+</FrameLayout>
